# NODE_25

./: .gitignore  README.md  pyproject.toml
src/node_25/cli/: train.py  train_pyomo.py  train_pytorch.py  viz_data.py  viz_pred.py
src/node_25/core/: collocation.py  datasets.py  ode_problems.py
src/node_25/eval/: metrics.py
src/node_25/models/: pyomo_model.py  pytorch_model.py
src/node_25/pipelines/: base_experiment.py  pytorch_experiment.py  utils.py
src/node_25/trainers/: pyomo_trainer.py  pytorch_trainer.py
src/node_25/viz/: plotting.py
