[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "node_25"
version = "0.1.0"
description = "Collocation-based Neural ODE benchmarks with CI-ready runs and confidence intervals"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mariia Shapovalova" }]
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "torch>=2.3",
  "tqdm>=4.66",
  "torchdiffeq>=0.2.4",
]


[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "black>=24",
  "mypy>=1.10",
]

viz = [
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.22",
]

analysis = [
  "pandas>=2.2",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
]

utils = [
  "rich>=13.7",
  "pyyaml>=6",
  "requests>=2.32",
]

pyomo = [
  "pyomo>=6.7",
  # Pyomo needs an external solver (e.g., ipopt/cbc/glpk) installed separately.
  # brew install ipopt
]

# JAX on Mac (CPU/Metal). Install only when needed.
jax-cpu = [
  "jax>=0.4.28",
  "jaxlib>=0.4.28",
  "diffrax>=0.6.0",
  "equinox>=0.11.4",
  "optax>=0.2.2",
  "chex>=0.1.86",
  "jaxtyping>=0.2.31",
]

torch-extras = [
  # Keep these optional; ensure versions match your torch when you install them.
  "torchvision",
  "torchaudio",
]

optim = [
  # These are compiled libs; keep optional and install only if/when needed.
  "casadi>=3.6",
  "proxsuite>=0.6",
  # Avoid cyipopt unless you specifically need Python bindings to IPOPT.
  # For Pyomo you usually call the ipopt binary, not cyipopt.
]

[project.scripts]
node25-train = "node_25.cli.train:main"
node25-viz-data = "node_25.cli.viz_data:main"
node25-viz-preds = "node_25.cli.viz_pred:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["node_25*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B","W","C90"]

[tool.pytest.ini_options]
addopts = "-q -ra --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

